<resources>
    <string name="app_name">Bar Droid</string>
    <string name="action_settings">Settings</string>
    <string name="addProduto">Cadastrar Produto</string>
    <string name="addPedido">Cadastrar Pedido</string>
    <string name="editPedido">Corrigir Pedido</string>
    <string name="fecharConta">Fechar Conta</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="listaaprodutos">Lista de Produtos</string>
    <string name="title_activity_cadastrar_produto">Cadastrar Produto</string>
    <string name="title_activity_lista_produtos">Lista de Produtos</string>
    <string name="title_activity_editar_produto">Editar Produto</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_cadastrar_pedido">Cadastro de Pedidos</string>
    <string name="title_activity_fechar_conta">Fechar Conta</string>
    <string name="title_activity_ludos_maps">Map</string>
    <string name="title_activity_tela_de_abertura">TelaDeAberturaActivity</string>
    <string name="title_activity_receita_diaria">ReceitaDiariaActivity</string>
</resources>
